--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -118,9 +118,9 @@
                               </tbody>
                             </table>
                             <div class="text-muted text-center" style="color: #718096;" align="center">
-                              Sent with &lt;3 from Hip Corp. <br>
-                              Hip Corp. 1 Hip Street<br>
-                              Gnarly State, 01234 USA <br>
+                              Enviado con &lt;3 por Moonitor <br>
+                              Murcia - España <br>
+                              hola@ciberpunk.es <br>
                             </div>
                             <table class="s-6 w-full" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%;" width="100%">
                               <tbody>
