--- a/app/templates/inc/testimonials.html
+++ b/app/templates/inc/testimonials.html
@@ -2,7 +2,7 @@
 <section class="testimonials-section py-5 text-light mb-3"
     style="background: linear-gradient(to bottom right, #6a11cb, #2575fc);">
     <div class="container text-center">
-        <h2 class="mb-5 fw-bold display-4">What Our Users Say</h2>
+        <h2 class="mb-5 fw-bold display-4">Qué dicen los usuarios</h2>
         <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <!-- Testimonial 1 -->
