--- a/app/templates/inc/trytool.html
+++ b/app/templates/inc/trytool.html
@@ -1,8 +1,8 @@
     <!-- Test Our Tool -->
     <section class="test-tool-section text-center py-5">
         <div class="container">
-            <h2>Test Our Monitoring Tool</h2>
-            <p>Enter your URL below to test our monitoring capabilities.</p>
+            <h2>Prueba la potencia de Moonitor</h2>
+            <p>Comprueba cualquier URL.</p>
             <form action="/start" method="post" id="pageInfoForm">
                 {{ form.csrf_token }}
                 <div class="mb-3">
