--- a/app/templates/user/edit_subscription.html
+++ b/app/templates/user/edit_subscription.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %}Actualiza tu subscripción{% endblock %}
 {% block content %}
 {% include 'inc/breadcrumbs.html' %}
 <div class="container mb-5">
@@ -9,7 +9,7 @@
             <div class="card shadow-lg border-0">
                 <div class="card-header bg-primary text-white text-center">
                     <i class="bi bi-journal-text" style="font-size: 2rem;"></i>
-                    <h5 class="mt-2">Detalles de Suscripción</h5>
+                    <h5 class="mt-2">Detalles de la Suscripción</h5>
                 </div>
                 <div class="card-body">
                     <form method="POST" class="needs-validation" novalidate>
