--- a/app/templates/user/logout.html
+++ b/app/templates/user/logout.html
@@ -1,8 +1,8 @@
 {% extends "no_frame.html" %}
 
-{% block title %}Adios - Flask App{% endblock %}
+{% block title %}Adios{% endblock %}
 
 {% block content %}
-    <h1>Gracias por venir a mi aplicación Flask</h1>
+    <h1>Ya has cerrado sesión</h1>
     <!-- Aquí puedes agregar el contenido de tu página de inicio -->
 {% endblock %}
