--- a/app/templates/user/usuarios.html
+++ b/app/templates/user/usuarios.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Usuarios- Flask App{% endblock %}
+{% block title %}Usuarios{% endblock %}
 
 {% block content %}
 
