--- a/app/templates/email/send_activation.html
+++ b/app/templates/email/send_activation.html
@@ -125,9 +125,9 @@
                                         </tbody>
                                     </table>
                                     <div class="text-muted text-center" style="color: #718096;" align="center">
-                                        Sent with &lt;3 from YourCompany <br>
-                                        YourCompany 123 Main Street<br>
-                                        Anytown, NY 12345 USA <br>
+                                        Enviado con &lt;3 por Moonitor <br>
+                                        Murcia - España <br>
+                                        hola@ciberpunk.es <br>
                                     </div>
                                     <table class="s-6 w-full" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%;" width="100%">
                                         <tbody>
