--- a/app/templates/user/edit_full_profile.html
+++ b/app/templates/user/edit_full_profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Actualizar tu perfil completo{% endblock %}
 {% block content %}
 {% include 'inc/breadcrumbs.html' %}
 <div class="container mb-5">
