--- a/app/templates/start copy.html
+++ b/app/templates/start copy.html
@@ -16,8 +16,9 @@
 
 {% include "inc/online_test.html" %}
 
+{% include "tools/tools_by_cat.html" %}
 
-
+{% include "tools/new-tools.html" %}
 
 {% include "inc/featurettes.html" %}
 
