--- a/app/templates/corporate_start.html
+++ b/app/templates/corporate_start.html
@@ -22,9 +22,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h1>Bussines Account</h1>
-                    <p class="mb-4">Get your free SEO report with actionable insights to boost your online presence.</p>
-                    <a href="#online-test" class="btn btn-cta btn-lg mt-3">Get Your Free SEO Report</a>
+                    <h1>Cuenta corporativa</h1>
+                    <p class="mb-4">Utiliza nuestra ayuda en linea y contacta con soporte online.</p>
+                    <a href="#online-test" class="btn btn-cta btn-lg mt-3">Soporte</a>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
                     <i class="fas fa-search fa-7x"></i>
