--- a/app/templates/inc/featurettes.html
+++ b/app/templates/inc/featurettes.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-md-6 mb-3">
             <h2 class="display-4">+100 checks en un mismo sitio</h2>
-            <p class="lead">Analyze your site's performance in real time with our powerful tools.</p>
+            <p class="lead">Analiza el estado de cualquier sitio con potentes herramientas.</p>
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Key Features</h5>
@@ -17,7 +17,7 @@
                     </ul>
                 </div>
             </div>
-            <a href="#features" class="btn btn-outline-primary">Learn More</a>
+            <a href="#features" class="btn btn-outline-primary">Conoce más</a>
         </div>
     </div>
     <div class="row featurette">
@@ -27,7 +27,7 @@
         </div>
         <div class="col-md-6 order-md-1 mb-3">
             <h2 class="display-4">Informes para todos los departamentos</h2>
-            <p class="lead">Generate detailed reports to help you understand and improve performance.</p>
+            <p class="lead">GGEnera informes detallados para cualquier ámbito o departamento</p>
             <div class="accordion" id="reportAccordion">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#pricing" class="btn btn-outline-primary">Explore Plans</a>
+            <a href="#pricing" class="btn btn-outline-primary">Precios</a>
         </div>
     </div>
     <div class="row featurette">
@@ -90,7 +90,7 @@
                     </tbody>
                 </table>
             </div>
-            <a href="#pricing" class="btn btn-outline-primary">Explore Plans</a>
+            <a href="#pricing" class="btn btn-outline-primary">Conoce los recursos</a>
         </div>
     </div>
 </section>
