--- a/app/templates/inc/suscriptions.html
+++ b/app/templates/inc/suscriptions.html
@@ -78,9 +78,9 @@
                     <ul class="list-unstyled text-start">
                         <li><i class="bi bi-check-circle text-success"></i> Herramientas e informes completos</li>
                         <li><i class="bi bi-check-circle text-success"></i> Sugerencias y mejoras con IA</li>
-                        <li><i class="bi bi-x-circle text-danger"></i> Panel con tu marca</li>
-                        <li><i class="bi bi-x-circle text-danger"></i> Informes en PDF</li>
-                        <li><i class="bi bi-x-circle text-danger"></i> Soporte en linea</li>
+                        <li><i class="bi bi-x-circle text-success"></i> Panel con tu marca</li>
+                        <li><i class="bi bi-x-circle text-success"></i> Informes en PDF</li>
+                        <li><i class="bi bi-x-circle text-success"></i> Soporte en linea</li>
                     </ul>
                     {% if current_user.subscription_plan == 'Corporate' %}
                     <span class="badge bg-success position-absolute top-0 end-0 m-3" data-bs-toggle="tooltip"
