--- a/app/templates/pro_start.html
+++ b/app/templates/pro_start.html
@@ -34,12 +34,12 @@
     {% include "inc/online_test.html" %}
 
 
-    <section class="hero-section">
+    <section class="hero-section mt-5 mb-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <h1>Analiza Sitios Enteros</h1>
-                    <p class="mb-4">Get your free SEO report with actionable insights to boost your online presence.</p>
+                    <p class="mb-4">Analisis sin límites con cuenta corporativa.</p>
                     <a href="#online-test" class="btn btn-cta btn-lg mt-3">Prueba Corporate</a>
                 </div>
                 <div class="col-md-4 d-none d-md-block">
@@ -78,14 +78,14 @@
     
 
 
-     <!-- CTA Section -->
+     <!-- CTA Section
      <section class="cta-section">
         <div class="container">
             <h2 class="mb-4">Start Your Free Trial Now!</h2>
             <p class="lead">Access all tools with a 7-day trial and discover the impact on your digital presence.</p>
             <a href="#pricing" class="btn btn-light btn-lg">Start Free Trial</a>
         </div>
-    </section>
+    </section>  -->
 
        <!-- Most Used Tools Section -->
        <section id="most-used-tools" class="mt-5">
@@ -109,20 +109,7 @@
     </section>
 
 
-    <section class="hero-section mt-5 mb-5">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <h1>Analiza Sitios Enteros</h1>
-                    <p class="mb-4">Get your free SEO report with actionable insights to boost your online presence.</p>
-                    <a href="#online-test" class="btn btn-cta btn-lg mt-3">Prueba Corporate</a>
-                </div>
-                <div class="col-md-4 d-none d-md-block">
-                    <i class="fas fa-search fa-7x"></i>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
 
 
