--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -16,14 +16,17 @@
 
 {% include "inc/online_test.html" %}
 
-
+{% include "inc/discover.html" %}
 
 
 {% include "inc/featurettes.html" %}
 
+
+
 {% include "inc/features.html" %}
 
-{% include "tools/most-used.html" %}
+<!-- New Tools Section -->
+{% include "tools/new-tools.html" %}
 
 {% include "inc/testimonials.html" %}
 
